--- a/app/index.html
+++ b/app/index.html
@@ -4,36 +4,34 @@
 <head>
   <meta charset="utf-8">
   <title>New project</title>
-  <!-- bootstrap:css -->
-  <!-- endinject -->
-
   <!-- dev:css -->
-  <link rel="stylesheet" href="./css/libs.css">
+
   <link rel="stylesheet" href="./css/screen.css">
+
   <!-- endinject -->
 </head>
 
 <body>
   <header>
-
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet aliquam excepturi blanditiis. Ad totam enim soluta temporibus rem, ab inventore, vel hic, dolores accusantium voluptate quidem voluptates ex excepturi corporis.</p>
   </header>
   <main>
-    test 22
+
+    index page
+
   </main>
   <footer>
-
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis autem obcaecati atque sed nostrum corporis illo facere laudantium. Nesciunt ullam saepe sint officiis distinctio! Quae amet dignissimos, eos iste facere!</p>
   </footer>
 
   <!-- jquery:js -->
   <script src="./libs/jquery/js/jquery.min.js"></script>
   <!-- endinject -->
 
-  <!-- bootstrap:js -->
-  <!-- endinject -->
-
   <!-- dev:js -->
-  <script src="./js/libs.js"></script>
-  <script src="./js/main.js"></script>
+
+  <script src="./js/all.js"></script>
+
   <!-- endinject -->
 </body>
 
