--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,7 @@
   <meta charset="utf-8">
   <title>New project</title>
   <!-- libs:css -->
-  <link rel="stylesheet" href="./libs/bxslider/src/jquery.bxslider.css">
   <link rel="stylesheet" href="./libs/fancybox/css/jquery.fancybox.css">
-  <link rel="stylesheet" href="./libs/fullpage/css/jquery.fullpage.min.css">
-  <link rel="stylesheet" href="./libs/msgBox/css/lobibox.min.css">
-  <link rel="stylesheet" href="./libs/slick/css/slick.css">
   <!-- endinject -->
   <!-- dev:css -->
   <link rel="stylesheet" href="./css/screen.css">
@@ -23,7 +19,11 @@
   </header>
   <main>
 
-    index page
+    <div id="slider">
+      <div class="slide">
+        slide-1
+      </div>
+    </div>
 
   </main>
   <footer>
@@ -31,20 +31,14 @@
   </footer>
   <script src="./libs/jquery/js/jquery.min.js"></script>
   <!--libs:js-->
-  <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
-  <script src="./libs/bxslider/js/jquery.bxslider.js"></script>
-  <script src="./libs/drawer/js/simpleDrawer.js"></script>
+
   <script src="./libs/fancybox/js/jquery.fancybox.pack.js"></script>
-  <script src="./libs/formValidator/js/jquery.form-validator.min.js"></script>
-  <script src="./libs/fullpage/js/jquery.fullpage.min.js"></script>
-  <script src="./libs/icheck/js/icheck.min.js"></script>
-  <script src="./libs/msgBox/js/lobibox.min.js"></script>
-  <script src="./libs/placeholder/js/jquery.textPlaceholder.js"></script>
-  <script src="./libs/select/js/selectize.min.js"></script>
-  <script src="./libs/slick/js/slick.min.js"></script>
+
   <!--endinject-->
   <!--dev:js-->
-  <script src="./js/main.js"></script>
+
+  <script src="./js/all.js"></script>
+
   <!--endinject-->
 </body>
 
